// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el archivo GifExpertApp Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Ellie Kemper"
      key="Ellie Kemper"
    />
    <GifGrid
      category="Minecraft"
      key="Minecraft"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en el archivo GifExpertApp Debe renderizar adecuadamente la app con matchSnapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
